results/archive/b60/compile_winograd_filter_transform_kernel.dp_20260309_124429.log
Exit code: 1
Compiler flags: -fsycl -O2 -std=c++17 -fsycl-unnamed-lambda -sycl-std=2020 -fhonor-nans -fhonor-infinities -fno-associative-math -fno-approx-func -no-ftz -fsycl-targets=spir64_gen,spir64
AOT Targets: pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u
=== STDOUT ===
=== SYCL Compilation for Intel XPU (BMG Support) ===
Timestamp: 20260309_124429
Kernel: winograd_filter_transform_kernel.dp
Source: /workspace/kernel_dataset/sycl/winograd_filter_transform_kernel.dp.cpp
Compiler: icpx
Compile Flags: -fsycl -O2 -std=c++17 -fsycl-unnamed-lambda -sycl-std=2020 -fhonor-nans -fhonor-infinities -fno-associative-math -fno-approx-func -no-ftz -fsycl-targets=spir64_gen,spir64
Device Link Flags: -fsycl-max-parallel-link-jobs=4 --offload-compress -fsycl-targets=spir64_gen,spir64 -Xs '-device pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u -options -cl-poison-unsupported-fp64-kernels -options -cl-intel-enable-auto-large-GRF-mode -options -cl-fp32-correctly-rounded-divide-sqrt -options -cl-intel-greater-than-4GB-buffer-required'
AOT Targets: pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u

Step 1: Compiling source to object file...
/workspace/kernel_dataset/sycl/winograd_filter_transform_kernel.dp.cpp:95:13: error: use of undeclared identifier 'item'
   95 |   int tid = item.get_group(0) * item.get_local_range(0) + item.get_local_id(0);
      |             ^
/workspace/kernel_dataset/sycl/winograd_filter_transform_kernel.dp.cpp:95:33: error: use of undeclared identifier 'item'
   95 |   int tid = item.get_group(0) * item.get_local_range(0) + item.get_local_id(0);
      |                                 ^
/workspace/kernel_dataset/sycl/winograd_filter_transform_kernel.dp.cpp:95:59: error: use of undeclared identifier 'item'
   95 |   int tid = item.get_group(0) * item.get_local_range(0) + item.get_local_id(0);
      |                                                           ^
/workspace/kernel_dataset/sycl/winograd_filter_transform_kernel.dp.cpp:126:23: error: unknown type name 'cudaStream_t'; did you mean 'ihipStream_t'?
  126 |                       cudaStream_t stream) {
      |                       ^~~~~~~~~~~~
      |                       ihipStream_t
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/detail/backend_traits_hip.hpp:26:16: note: 'ihipStream_t' declared here
   26 | typedef struct ihipStream_t *HIPstream;
      |                ^
/workspace/kernel_dataset/sycl/winograd_filter_transform_kernel.dp.cpp:126:36: error: variable has incomplete type 'ihipStream_t'
  126 |                       cudaStream_t stream) {
      |                                    ^
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/detail/backend_traits_hip.hpp:26:16: note: forward declaration of 'ihipStream_t'
   26 | typedef struct ihipStream_t *HIPstream;
      |                ^
/workspace/kernel_dataset/sycl/winograd_filter_transform_kernel.dp.cpp:132:27: error: expected expression
  132 |   filterTransform_kernel<<<kBlocks, kBlockSize, 0, stream>>>(
      |                           ^
/workspace/kernel_dataset/sycl/winograd_filter_transform_kernel.dp.cpp:132:60: error: expected expression
  132 |   filterTransform_kernel<<<kBlocks, kBlockSize, 0, stream>>>(
      |                                                            ^
/workspace/kernel_dataset/sycl/winograd_filter_transform_kernel.dp.cpp:135:20: error: use of undeclared identifier 'cudaGetLastError'
  135 |   ReportCUDAErrors(cudaGetLastError());
      |                    ^
/workspace/kernel_dataset/sycl/winograd_filter_transform_kernel.dp.cpp:133:7: warning: left operand of comma operator has no effect [-Wunused-value]
  133 |       N, C, N * C, transformedFilter, filter);
      |       ^
/workspace/kernel_dataset/sycl/winograd_filter_transform_kernel.dp.cpp:133:10: warning: left operand of comma operator has no effect [-Wunused-value]
  133 |       N, C, N * C, transformedFilter, filter);
      |          ^
2 warnings and 8 errors generated.
[ERROR] Compilation step 1 failed with exit code 1

=== STDERR ===
+ echo '=== SYCL Compilation for Intel XPU (BMG Support) ==='
+ echo 'Timestamp: 20260309_124429'
+ echo 'Kernel: winograd_filter_transform_kernel.dp'
+ echo 'Source: /workspace/kernel_dataset/sycl/winograd_filter_transform_kernel.dp.cpp'
+ echo 'Compiler: icpx'
+ echo 'Compile Flags: -fsycl -O2 -std=c++17 -fsycl-unnamed-lambda -sycl-std=2020 -fhonor-nans -fhonor-infinities -fno-associative-math -fno-approx-func -no-ftz -fsycl-targets=spir64_gen,spir64'
+ echo 'Device Link Flags: -fsycl-max-parallel-link-jobs=4 --offload-compress -fsycl-targets=spir64_gen,spir64 -Xs '\''-device pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u -options -cl-poison-unsupported-fp64-kernels -options -cl-intel-enable-auto-large-GRF-mode -options -cl-fp32-correctly-rounded-divide-sqrt -options -cl-intel-greater-than-4GB-buffer-required'\'''
+ echo 'AOT Targets: pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u'
+ echo ''
+ '[' '!' -f /workspace/kernel_dataset/sycl/winograd_filter_transform_kernel.dp.cpp ']'
+ mkdir -p /workspace/build_sycl
+ mkdir -p /workspace/results/b60
+ echo 'Step 1: Compiling source to object file...'
+ icpx -fsycl -O2 -std=c++17 -fsycl-unnamed-lambda -sycl-std=2020 -fhonor-nans -fhonor-infinities -fno-associative-math -fno-approx-func -no-ftz -fsycl-targets=spir64_gen,spir64 -c /workspace/kernel_dataset/sycl/winograd_filter_transform_kernel.dp.cpp -o /workspace/build_sycl/winograd_filter_transform_kernel.dp.o
+ tee /workspace/results/b60/compile_winograd_filter_transform_kernel.dp_20260309_124429.log.step1
+ STEP1_EXIT=1
+ '[' 1 -ne 0 ']'
+ echo '[ERROR] Compilation step 1 failed with exit code 1'
+ exit 1
